failed appl se sing in

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -15,7 +15,9 @@
         "signupAttributes": [
           "EMAIL"
         ],
-        "socialProviders": [],
+        "socialProviders": [
+          "APPLE"
+        ],
         "usernameAttributes": [
           "EMAIL",
           "PHONE_NUMBER"
