google is working on web

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -16,7 +16,7 @@
           "EMAIL"
         ],
         "socialProviders": [
-          "APPLE"
+          "GOOGLE"
         ],
         "usernameAttributes": [
           "EMAIL",
