google and apple sign in

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -16,7 +16,7 @@
           "EMAIL"
         ],
         "socialProviders": [
-          "GOOGLE"
+          "APPLE"
         ],
         "usernameAttributes": [
           "EMAIL",
