google and apple sign in works

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -16,6 +16,7 @@
           "EMAIL"
         ],
         "socialProviders": [
+          "GOOGLE",
           "APPLE"
         ],
         "usernameAttributes": [
